# afni-3drsfc

./: Dockerfile  manifest.json  pyproject.toml  run.py
fw_gear_fw_example/: main.py  parser.py
